--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@swc/core": "^1.7.6",
     "graphql": "^16.9.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
